<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_TestCaseResult" Id="{9c511c0b-2edf-4938-bd37-33f5b59a1386}">
    <Declaration><![CDATA[TYPE ST_TestCaseResult :
STRUCT
    TestName : T_MaxString;
    TestClassName : T_MaxString;
    TestIsFailed : BOOL;
    TestIsSkipped : BOOL;
    FailureMessage : T_MaxString;
    FailureAssertion : Tc2_System.T_MaxString;
    FailureType : E_AssertionType;
    NumberOfAsserts : UINT;
    Duration : LREAL; // in seconds
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>